Arrays.asList changed to List.of