@@ -3,7 +3,6 @@ package sdmExam;
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.TestFactory;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -21,8 +20,8 @@ public class BoardSideShould {
         Position thirdPosition = Position.in(13, 1);
         Position fourthPosition = Position.in(1, 13);
 
-        List<BoardSide> sideList = Arrays.asList(BoardSide.TOP, BoardSide.BOTTOM, BoardSide.LEFT, BoardSide.RIGHT);
-        List<Position> positionList = Arrays.asList(firstPosition, secondPosition, thirdPosition, fourthPosition);
+        List<BoardSide> sideList = List.of(BoardSide.TOP, BoardSide.BOTTOM, BoardSide.LEFT, BoardSide.RIGHT);
+        List<Position> positionList = List.of(firstPosition, secondPosition, thirdPosition, fourthPosition);
 
         return sideList.stream()
                 .map(side -> DynamicTest.dynamicTest("Checking Side " + side,
