@@ -6,7 +6,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -47,9 +46,9 @@ public class IntersectionShould {
         Intersection secondParameter = new Intersection(Position.in(7, 3), Stone.BLACK);
         Intersection thirdParameter = new Intersection(Position.in(3, 12), Stone.BLACK);
 
-        List<Intersection> inputList = Arrays.asList(firstIntersection, secondIntersection, thirdIntersection);
-        List<Boolean> outputList = Arrays.asList(true, false, false);
-        List<Intersection> parameterList = Arrays.asList(firstParameter, secondParameter, thirdParameter);
+        List<Intersection> inputList = List.of(firstIntersection, secondIntersection, thirdIntersection);
+        List<Boolean> outputList = List.of(true, false, false);
+        List<Intersection> parameterList = List.of(firstParameter, secondParameter, thirdParameter);
 
         return inputList.stream()
                 .map(intersection -> DynamicTest.dynamicTest("Checking Orthogonal Adjacent of " + intersection,
@@ -70,9 +69,9 @@ public class IntersectionShould {
         Intersection secondParameter = new Intersection(Position.in(4, 4), Stone.WHITE);
         Intersection thirdParameter = new Intersection(Position.in(5, 1), Stone.WHITE);
 
-        List<Intersection> inputList = Arrays.asList(firstIntersection, secondIntersection, thirdIntersection);
-        List<Boolean> outputList = Arrays.asList(true, true, false);
-        List<Intersection> parameterList = Arrays.asList(firstParameter, secondParameter, thirdParameter);
+        List<Intersection> inputList = List.of(firstIntersection, secondIntersection, thirdIntersection);
+        List<Boolean> outputList = List.of(true, true, false);
+        List<Intersection> parameterList = List.of(firstParameter, secondParameter, thirdParameter);
 
         return inputList.stream()
                 .map(intersection -> DynamicTest.dynamicTest("Checking Diagonal Adjacent of " + intersection,
